correct spacing

--- a/style.sass
+++ b/style.sass
@@ -404,3 +404,7 @@ section
         font-weight: 600
         &:hover
             color: $blue
+
+.especial-title
+    @media (max-width: 468px)
+        text-align: center !important
